# functional-desing

./: .gitignore  Makefile  README.md  pyproject.toml
basical_fp/: Makefile  pyproject.toml
basical_fp/src/basical_fp/: higher_function.py  main.py  recursive.py  sum_types.py  transform.py
basical_fp/tests/: test_closures.py  test_decorators.py  test_main.py  test_recursive.py
design-perttern/: Makefile  pyproject.toml
design-perttern/src/design_perttern/: __init__.py
design-perttern/src/design_perttern/adapter_perttern/: config.json  config.xml  config_access.py  experiment.py  main.py
design-perttern/src/design_perttern/adapter_perttern/basic/: xml_adapter.py
design-perttern/src/design_perttern/adapter_perttern/class_base/: xml_adapter.py
design-perttern/src/design_perttern/dispatch_table/: dispatch_table_and_pipeline.py  rule_and_func.py
design-perttern/src/design_perttern/registry_parttern/: higher_order_function_like_registry.py  plugin_like_registry.py  simple_registry.py  switching_silializer_registry.py
docs/: FP向きのディレクトリ構造.md  関数の命名規則.md
docs/images/: ソースコードに表現されるもの.dio
railway-oriented-programming/: pyproject.toml
railway-oriented-programming/src/railway_oriented_programming/: __init__.py  maybe.py  maybe_spr.py
src/functional_py/: closures.py  decorators.py  main.py  recursive.py
tests/: test_main.py  test_recursive.py  test_transform.py
