[project]
name = "functional-py"
version = "0.1.0"
description = ""
authors = [
    {name = "behike56",email = "engineering@lambda-publishing.dev"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "functional_py", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
