[project]
name = "design-perttern"
version = "0.1.0"
description = ""
authors = [{ name = "behike56", email = "fxy.x@lambda-publishing.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["beautifulsoup4>=4.12.0", "lxml>=4.9.0"]

[tool.poetry]
packages = [{ include = "design_perttern", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
