[project]
name = "design-perttern"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "behike56", email = "fxy.x@lambda-publishing.com" }]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
design-perttern-s = "design_perttern_s:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "myst-parser>=4.0.1",
    "pytest>=9.0.2",
    "ruff>=0.14.8",
    "sphinx>=8.2.3",
    "sphinx-autodoc-typehints>=3.5.2",
]
